--- a/kkkops_p3.html
+++ b/kkkops_p3.html
@@ -51,7 +51,7 @@ body {
 
 
 <video muted loop id="myVideo">
-  <source src="videoplayback.mp4" type="video/mp4">
+  <source src="small_vid.mp4" type="video/mp4">
   Your browser does not support HTML5 video.
 </video>
 
@@ -69,7 +69,7 @@ body {
 <script>
 var video = document.getElementById("myVideo");
 var btn = document.getElementById("myBtn");
-var starttime = Math.floor(Math.random() * 1000) + 1;
+var starttime = Math.floor(Math.random() * 1200) + 1;
 console.log(starttime);
 
 video.currentTime=starttime;
@@ -86,7 +86,7 @@ video.play();
 }*/
 
 setTimeout(function () {
-   window.location.href = "kkkops4.html"; //will redirect to your blog page (an ex: blog.html)
+   window.location.href = "index.html"; //will redirect to your blog page (an ex: blog.html)
 }, 5000); //will call the function after 2 secs.
 </script>
 
