--- a/kkkops_p3.html
+++ b/kkkops_p3.html
@@ -86,8 +86,8 @@ video.play();
 }*/
 
 setTimeout(function () {
-   window.location.href = "index.html"; //will redirect to your blog page (an ex: blog.html)
-}, 5000); //will call the function after 2 secs.
+   //window.location.href = "index.html"; //will redirect to your blog page (an ex: blog.html)
+//}, 5000); //will call the function after 2 secs.
 </script>
 
 </body>
