--- a/kkkops_p3.html
+++ b/kkkops_p3.html
@@ -50,7 +50,7 @@ body {
 
 
 
-<video muted loop id="myVideo">
+<video playsinline muted loop id="myVideo">
   <source src="small_vid.mp4" type="video/mp4">
   Your browser does not support HTML5 video.
 </video>
