--- a/kkkops_p2.html
+++ b/kkkops_p2.html
@@ -50,7 +50,7 @@ body {
 
 
 
-<video playsinline autoplay muted loop id="myVideo">
+<video playsinline muted loop id="myVideo">
   <source src="small_vid.mp4" type="video/mp4">
   Your browser does not support HTML5 video.
 </video>
@@ -72,6 +72,7 @@ var btn = document.getElementById("myBtn");
 var starttime = Math.floor(Math.random() * 1200) + 1;
 console.log(starttime);
 
+video.pause();
 video.currentTime=starttime;
 video.play();
 
