--- a/kkkops_p2.html
+++ b/kkkops_p2.html
@@ -72,8 +72,10 @@ var btn = document.getElementById("myBtn");
 var starttime = Math.floor(Math.random() * 1200) + 1;
 console.log(starttime);
 
+video.load();
 video.pause();
 video.currentTime=starttime;
+
 video.play();
 
 /*function myFunction() {
