--- a/kkkops_p3.html
+++ b/kkkops_p3.html
@@ -51,7 +51,7 @@ body {
 
 
 <video playsinline muted loop id="myVideo">
-  <source src="videoplayback.mp4" type="video/mp4">
+  <source src="small_vid.mp4" type="video/mp4">
   Your browser does not support HTML5 video.
 </video>
 
